# DronesForBlood

./: .gitignore  .gitmodules  LICENSE  README.md  main.html  mavros.launch  start_sim
Documents/: .~lock.Group Contract.odt#  Group Contract.odt  System-Diagram.xml  docker_ports
Documents/flight logs/Flight_5_11_irlock_test/: log_18_2018-11-5-16-07-00.ulg
Documents/flight logs/irlock_test/: log_74_2018-10-22-13-16-42.ulg  log_75_2018-10-22-13-22-22.ulg  log_77_2018-10-22-13-37-56.ulg  log_78_2018-10-22-14-05-58.ulg  log_79_2018-10-22-14-11-50.ulg  log_80_2018-10-22-14-21-02.ulg  log_82_2018-10-22-14-25-02.ulg
UserInterface/: main.html
docker_tests/: .dockerignore  .travis.yml  Dockerfile  Dockerfile.old  README.md  deploy_latest.sh  docker-compose.yml  error_handler.sh
msg/: mavlink_lora_pos.msg
simulation/: Dockerfile  launch_sim_sitl_gazebo.sh  run.sh
software/Depricated_software/monitor/srv/: getstatus.srv
software/PX4_firmware_1.8_Stable/: HJ550_std_V1.params
software/deprecated_software/monitor/: CMakeLists.txt
software/deprecated_software/monitor/scripts/: gui.py
software/gcs/: .catkin_workspace  Dockerfile  crashfile.txt  drone1file.txt  drone2file.txt  requirements.txt  run_with_mavros.sh
software/gcs/src/build-/: drone_decon.cbp
software/gcs/src/build-/catkin_generated/: drone_decon-msg-extras.cmake.develspace.in  drone_decon-msg-extras.cmake.installspace.in  generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
software/gcs/src/build-/catkin_generated/installspace/: _setup_util.py  drone_decon-msg-paths.cmake  drone_decon.pc  (+1 more)
software/gcs/src/build-/cmake/: drone_decon-genmsg-context.py  drone_decon-genmsg.cmake
software/gcs/src/build-/gtest/: gmock.cbp
software/gcs/src/dock/: CMakeLists.txt  package.xml  setup.py
software/gcs/src/dock/nodes/: dock_node
software/gcs/src/dock/src/: dock_node.py
software/gcs/src/drone_decon/: CMakeLists.txt  package.xml
software/gcs/src/drone_decon/include/: DroneDeconflict.hpp  UTM.hpp  defines.hpp  geofunctions.hpp
software/gcs/src/drone_decon/launch/: prog.launch
software/gcs/src/drone_decon/msg/: GPS.msg  RedirectDrone.msg  RegisterDrone.msg  UTMDrone.msg  UTMDroneList.msg  heartbeatDecon.msg
software/gcs/src/drone_decon/src/: DroneDeconflict.cpp  crashfile.txt  drone1file.txt  drone2file.txt  main.cpp  plot.py  sim.cpp
software/gcs/src/drone_decon/srv/: takeOffAndLandCheck.srv
software/gcs/src/dronelink/: CMakeLists.txt  package.xml  setup.py
software/gcs/src/dronelink/msg/: mavlink_lora_status.msg
software/gcs/src/dronelink/nodes/: dronelink
software/gcs/src/dronelink/src/: node.py
software/gcs/src/dronelink/src/dronelink/: dronelink.py
software/gcs/src/gcs_master/: CMakeLists.txt  package.xml  setup.py
software/gcs/src/gcs_master/launch/: drones-for-blood.launch  gcs_master.launch  gcs_master.test  gcs_master_sim.test  gcs_master_sim_userlink.test
software/gcs/src/gcs_master/nodes/: gcs_master  sim_dronelink  sim_pathplanner  sim_userlink
software/gcs/src/gcs_master/src/: .main.py.swp  drone_fsm.py  main.py
software/gcs/src/gcs_master/src/gcs_master/: drone_fsm.py  gcs_master.py  main.py  path_operations.py
software/gcs/src/gcs_master/test/: test_drone_fsm.py
software/gcs/src/monitor/: CMakeLists.txt  package.xml  setup.py
software/gcs/src/monitor/launch/: monitor.launch
software/gcs/src/monitor/scripts/: gui.py  monitor_node.py
software/gcs/src/monitor/src/: node.py
software/gcs/src/pathplanner/: CMakeLists.txt  package.xml
software/gcs/src/pathplanner/headers/: mapcontroller.h  mapgenerator.h  node.h  rosMsg.h  simulation.h  visualizer.h
software/gcs/src/pathplanner/headers/global/: defines.h  geofunctions.h
software/gcs/src/pathplanner/msg/: blocked_goal.msg  start_end_coord.msg
software/gcs/src/pathplanner/sources/: main.cpp  mapcontroller.cpp  mapgenerator.cpp  node.cpp  pathfinder.cpp  rosMsg.cpp  rosMsg.cpp.autosave  sim.cpp  simulation.cpp  visualizer.cpp
software/gcs/src/pathplanner/sources/UTM/: get_uav_technical_data.py
software/gcs/src/pathplanner/sources/watch/: watchdrone.cpp  watchzone.cpp
software/gcs/src/pathplanner/test files/: crashfile.txt  kml_test.kml
software/gcs/src/utm/: CMakeLists.txt  package.xml  setup.py
software/gcs/src/utm/msg/: utm_no_flight_circle.msg  utm_rally_point.msg  utm_rally_point_list.msg  utm_tracking_data.msg
software/gcs/src/utm/scripts/: path_operations.py
software/gcs/src/utm/src/: kml_reader.py  main.cpp  utm_node.py
software/pathplanner/: CMakeLists.txt  CMakeLists.txt.autosave  package.xml
software/pathplanner/buildd/: PATH_FINDER  PATH_FINDER.cbp
software/pathplanner/headers/: defines.h  mapcontroller.h  mapcontroller.h.autosave  mapgenerator.h  node.h  nodecollection.h  pathfinder.h  pathshortener.h  rosMsg.h  simulation.h  visualizer.h
software/pathplanner/headers/global/: defines.h  geofunctions.h
software/pathplanner/headers/watch/: watchdrone.h  watchzone.h
software/pathplanner/msg/: add_no_flight_area.msg  add_no_flight_circle.msg  no_flight_circle.msg  utm_add_tracking_data.msg
software/pathplanner/sources/: main.cpp  mapcontroller.cpp  mapgenerator.cpp  node.cpp  nodecollection.cpp  pathfinder.cpp  pathshortener.cpp  rosMsg.cpp  simulation.cpp  visualizer.cpp
software/pathplanner/sources/UTM/: get_uav_technical_data.py  utm_node.py
software/pathplanner/sources/watch/: watchdrone.cpp  watchzone.cpp
software/pathplannerOld/: setup.py
software/pathplannerOld/headers/: defines.h  mapcontroller.h  pathexporter.h  rosMsg.h
software/pathplannerOld/headers/global/: geofunctions.h
software/pathplannerOld/headers/watch/: watchdrone.h  watchzone.h
software/pathplannerOld/msg/: flight_mission.msg  no_flight_area.msg
software/pathplannerOld/sources/: main.cpp  mapgenerator.cpp  node.cpp  pathexporter.cpp  rosMsg.cpp  simulation.cpp  visualizer.cpp
software/pathplannerOld/sources/UTM/: add_uav_tracking_data.py  utm_node.py
tests/: normal_operation_test.sh  start_containers.sh
(+1 files in other folders)
