<?xml version="1.0"?>
<package>
  <name>drone_decon</name>
  <version>0.0.0</version>
  <description>Used for deconflicting drones in the RMUASD project</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kasper.lorenzen@gmail.com">Kasper Hoej lorenzen</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mavlink_lora</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
