<?xml version="1.0"?>
<package>
  <name>PATHPLANNER</name>
  <version>1.0.0</version>
  <description>The pathplanner package</description>

  <maintainer email="kjen@mmmi.sdu.dk">Kjeld Jensen</maintainer>
  <license>BSD 3-Clause</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>mavlink_lora</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
